Updating Dynamic Verse

--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
             <div class="row text-center">
                 <div class="col-12 mb-3">
                     <h3>يوميا آية الكتاب المقدس</h3>
-                    <p>لِلْإِنْسَانِ فَرَحٌ بِجَوَابِ فَمِهِ، وَٱلْكَلِمَةُ فِي وَقْتِهَا مَا أَحْسَنَهَا!</p>
-                    <p><a href="https://dailyverses.net/ar/2025/6/9" target="_blank">أَمْثَالٍ ١٥:‏٢٣</a></p>
+                    <div id="dailyVersesWrapper"></div>
+                    <script async defer src="https://dailyverses.net/get/verse.js?language=ar"></script>
                 </div>
             </div>
             <div class="row">
@@ -471,3 +471,5 @@
             });
         });
     </script>
+</body>
+</html>
