--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">ال ARK</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="https://lifeinchrist.ca/ar/ar-refugeesponsorshipprogram/">برنامج كفالة الالجئين</a></li>
+                            <li><a class="dropdown-item" href="https://lifeinchrist.ca/ar/ar-refugeesponsorshipprogram/">برنامج كفالة اللاجئين</a></li>
                             <li><a class="dropdown-item" href="https://lifeinchrist.ca/ar/ar-tnbp/">برنامج البدايات الجديدة</a></li>
                         </ul>
                     </li>
@@ -421,7 +421,7 @@
         <div class="container mt-4">
             <div class="row text-center">
                 <div class="col-12 mb-3">
-                    <h3>يوميا آية الكتاب المقدس</h3>
+                    <h3>يومياً آية من الكتاب المقدس</h3>
                     <div id="dailyVersesWrapper"></div>
                     <script async defer src="https://dailyverses.net/get/verse.js?language=ar"></script>
                 </div>
