--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             <div class="row">
                 <div class="col-md-2"><a href="https://www.lifeinchrist.ca/ar/ar-about/">عن</a><ul class="list-unstyled"><li><a href="https://www.lifeinchrist.ca/ar/ar-thefounder/">المؤسس</a></li><li><a href="https://www.lifeinchrist.ca/ar/ar-theteam/">الفريق</a></li><li><a href="https://www.lifeinchrist.ca/ar/ar-mediagallery/">أرشيف الصور</a></li></ul></div>
                 <div class="col-md-1"><a href="https://www.lifeinchrist.ca/ar/ar-events/">الأحداث</a></div>
-                <div class="col-md-2"><a href="https://www.lifeinchrist.ca/ar/ar-theark/">ال ARK</a><ul class="list-unstyled"><li><a href="https://www.lifeinchrist.ca/ar/ar-refugeesponsorshipprogram/">برنامج كفالة الالجئين</a></li><li><a href="https://www.lifeinchrist.ca/ar/ar-tnbp/">برنامج البدايات الجديدة</a></li></ul></div>
+                <div class="col-md-2"><a href="https://www.lifeinchrist.ca/ar/ar-theark/">ال ARK</a><ul class="list-unstyled"><li><a href="https://www.lifeinchrist.ca/ar/ar-refugeesponsorshipprogram/">برنامج كفالة اللاجئين</a></li><li><a href="https://www.lifeinchrist.ca/ar/ar-tnbp/">برنامج البدايات الجديدة</a></li></ul></div>
                 <div class="col-md-3"><a href="https://www.lifeinchrist.ca/ar/ar-mps/">مدرسة الكتاب المقدس</a><ul class="list-unstyled"><li><a href="https://www.lifeinchrist.ca/ar/ar-firstcohort/">المجموعة الأولى</a></li></ul></div>
                 <div class="col-md-1"><a href="https://www.lifeinchrist.ca/ar/ar-articles/">مقالات</a></div>
                 <div class="col-md-2"><a href="https://www.lifeinchrist.ca/ar/ar-getinvolved/">شاركنا</a></div>
